--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Just enough light",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Adds a mask overlay to all websites with a visible area around the cursor. Tailored for users with light sensitivity. Functions as a dark reader, adapting to every webpage, including those that are already dark, and will feature a torch mode for focused illumination.",
   "permissions": [
     "storage"
@@ -9,6 +9,17 @@
   "host_permissions": [
     "<all_urls>"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "",
+    "default_icon": {
+      "16": "icons/Just-enough-light-16.png",
+      "48": "icons/Just-enough-light-48.png",
+      "128": "icons/Just-enough-light-128.png"
+    }
+  },
   "content_scripts": [
     {
       "matches": [
@@ -24,8 +35,8 @@
   ],
   "options_page": "options.html",
   "icons": {
-    "16": "Just-enough-light-16.png",
-    "48": "Just-enough-light-48.png",
-    "128": "Just-enough-light-128.png"
+    "16": "icons/Just-enough-light-16.png",
+    "48": "icons/Just-enough-light-48.png",
+    "128": "icons/Just-enough-light-128.png"
   }
 }
